--- a/packages/website/src/app.css
+++ b/packages/website/src/app.css
@@ -19,11 +19,11 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
  
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 215 25% 27%;
+    --primary-foreground: 0 0% 100%;
  
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 213 94% 68%;
+    --secondary-foreground: 0 0% 100%;
  
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
@@ -73,6 +73,22 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-dm-sans;
+  }
+}
+
+@supports (-webkit-touch-callout: none) {
+  .min-h-screen {
+    min-height: -webkit-fill-available !important;
+  }
+
+  .h-screen {
+    height: 100vh;
+    max-height: -webkit-fill-available !important;
+  }
+
+  .max-h-screen {
+    max-height: 100vh;
+    max-height: -webkit-fill-available !important;
   }
 }
