Chat page almost done

--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -18,7 +18,7 @@
     --primary-foreground: 237 0% 100%;
     --secondary: 207 86% 8%;
     --secondary-foreground: 182.24 89.33% 70.59%;
-    --accent: 267 86% 8%;
+    --accent: 220, 13%, 91%;
     --accent-foreground: 305.12 79.61% 59.61%;
     --destructive: 360 100% 57.79%;
     --destructive-foreground: 0 0% 100%;
