--- a/apps/www/src/app.css
+++ b/apps/www/src/app.css
@@ -29,7 +29,7 @@
   }
 
   .dark,
-  [data-kb-theme='dark'] {
+  [data-kb-theme="dark"] {
     --background: 237 34% 0%;
     --foreground: 237 28% 99%;
     --muted: 207 8% 13%;
@@ -66,9 +66,7 @@
 
   body {
     @apply bg-background text-foreground;
-    font-feature-settings:
-      'rlig' 1,
-      'calt' 1;
+    font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
 
