Enhance data source management and UI components in admin panel
- Introduced new data source handling features, including the ability to add, edit, and delete data sources through dedicated UI components.
- Implemented a sidebar navigation for the admin panel, improving user experience and accessibility.
- Added support for processing data source files via SQS, enhancing the backend functionality for file handling.
- Updated package dependencies to include new libraries for improved functionality and performance.
- Refactored existing components for better maintainability and consistency across the application.

These changes significantly enhance the data source management capabilities and overall user interface in the admin section of the application.

--- a/apps/www/src/app.css
+++ b/apps/www/src/app.css
@@ -26,6 +26,14 @@
     --error-foreground: 0 0% 100%;
     --ring: 237 86% 8%;
     --radius: 0.7rem;
+    --sidebar-background: 0 0% 99%;
+    --sidebar-foreground: 237 64% 3%;
+    --sidebar-primary: 237 86% 8%;
+    --sidebar-primary-foreground: 237 0% 100%;
+    --sidebar-accent: 220, 13%, 91%;
+    --sidebar-accent-foreground: 305.12 79.61% 59.61%;
+    --sidebar-border: 237 10% 94%;
+    --sidebar-ring: 237 86% 8%;
   }
 
   .dark,
@@ -52,6 +60,14 @@
     --error-foreground: 0 0% 100%;
     --ring: 237 86% 8%;
     --radius: 0.5rem;
+    --sidebar-background: 237 34% 0%;
+    --sidebar-foreground: 237 28% 99%;
+    --sidebar-primary: 237 23.41% 12.47%;
+    --sidebar-primary-foreground: 237 100% 95.94%;
+    --sidebar-accent: 267 86% 8%;
+    --sidebar-accent-foreground: 305.12 79.61% 59.61%;
+    --sidebar-border: 237 10% 10%;
+    --sidebar-ring: 237 86% 8%;
   }
 
   * {
